# buildbot

./: .arch-inventory  .bbtravis.yml  .codecov.yml  .coveragerc  .darcs-boring  .dockerignore  .gitattributes  .gitignore  .gitmodules  .isort.cfg  .mailmap  .mention-bot  .project  .py3.notworking.txt  .py3_tests_status.txt  .pydevproject  .pyup.yml  .stgit-edit.txt  .travis.yml  .veneno.ros.md.ci🔂  Branch.ChangeLog  Branch.changelog  Branch.notes  CONTRIBUTING.md  CONTRIBUTING.rst  CREDITS  ChangeLog  ChangeLog-0.7.10  ChangeLog-0.7.10p1  ChangeLog-0.7.11  ChangeLog-0.7.12  ChangeLog-0.7.8.bz2  ChangeLog-0.7.9  ChangeLog-0.8.0  ChangeLog.svnpoller  Dockerfile.master  LICENSE  MAINTAINERS.txt  MANIFEST.in  Makefile  (+34 more)
master/: .dockerignore  CREDITS  Dockerfile  Dockerfile.py3  Dockerfile.ubuntu  MANIFEST.in  Makefile  NEWS  README  README.rst  README.w32  UPGRADING  prompt.md  pyproject.toml  requirements-docker-extras.txt  requirements.txt  ruff.toml  setup.cfg  setup.py  tox.ini
master/buildbot/: __init__.py  ampmanager.py  asyncio.py  buildbot_net_statistics.py  buildbot_net_usage_data.py  buildrequest.py  buildslave.py  cache.py  compat.py  config.py  ec2buildslave.py  errors.py  interfaces.py  lcbuildbslave.py  libvirtbuildslave.py  locks.py  manhole.py  master.py  pbmanager.py  pbutil.py  protocols.py  revlinks.py  scheduler.py  sourcestamp.py  status.py  vboxbuildslave.py  warnings.py  worker_rename.py  worker_transition.py  wrapper.py
master/buildbot/buildslave/: __init__.py  base.py  docker.py  ec2.py  libvirt.py  local.py  manager.py  openstack.py
master/buildbot/buildworker/: __init__.py  base.py  docker.py  ec2.py  libvirt.py  local.py  manager.py  openstack.py
master/buildbot/changes/: base.py  bitbucket.py  bonsaipoller.py  bzrpoller.py  changes.py  filter.py  freshcvs.py  gerritchangesource.py  github.py  gitpoller.py  hgbuildbot.py  hgpoller.py  mail.py  maildir.py  manager.py  p4poller.py  pb.py  svnpoller.py
master/buildbot/clients/: base.py  debug.py  gtkPanes.py  sendchange.py  text.py  tryclient.py  usersclient.py
master/buildbot/config/: __init__.py  builder.py  builder_compat.py  buildrequest_compat.py  buildset_compat.py  checks.py  client_compat.py  errors.py  event_compat.py  master.py
master/buildbot/configurators/: __init__.py  janitor.py
master/buildbot/data/: base.py  build_data.py  builders.py  buildrequests.py  builds.py  buildsets.py  buildslaves.py  buildworkers.py  changes.py  changesources.py  codebase_branches.py  codebase_commits.py  codebases.py  connector.py  exceptions.py  forceschedulers.py  graphql.py  logchunks.py  logs.py  masters.py  messageinfo.py  patches.py  projects.py  properties.py  resultspec.py  root.py  schedulers.py  sourcestamps.py  steps.py  test_result_sets.py  test_results.py  testhooks.py  types.py  update.py  workers.py
master/contrib/: Dockerfile  README.txt  SimpleConfig.py  api_proxy.py  bb_applet.py  bitbucket_buildbot.py  bk_buildbot.py  buildbot_cvs_mail.py  buildbot_json.py  bzr_buildbot.py  check_buildbot.py  check_smtp.py  coverage2text.py  darcs_buildbot.py  fakechange.py  fakemaster.py  fix_changes_pickle_encoding.py  generate_changelog.py  git_buildbot.py  git_buildbot_py3.py  github_buildbot.py  gitlab_buildbot.py  googlecode_atom.py  hgbuildbot.py  logentries.py  post_build_request.py  run_maxq.py  svn_buildbot.py  svn_watcher.py  svnpoller.py  viewcvspoll.py  webhook_status.py
master/docker/: README.md  buildbot.tac  start_buildbot.sh
master/docker-example/: README.md  master.cfg
master/docs/: Makefile  buildbot.1  buildbot.texinfo  buildslave.1  cfg-builders.texinfo  cfg-buildfactories.texinfo  cfg-buildslaves.texinfo  cfg-buildsteps.texinfo  cfg-changesources.texinfo  cfg-global.texinfo  cfg-interlocks.texinfo  cfg-schedulers.texinfo  cfg-statustargets.texinfo  cmdline.texinfo  concepts.texinfo  conf.py  configuration.texinfo  cust-changesources.texinfo  developer.texinfo  index.rst  indices.rst  installation.texinfo  introduction.texinfo  release-notes.rst  relnotes.rst.jinja  resources.texinfo  spelling_wordlist.txt  version.py
master/spec/: api.raml
pkg/: MANIFEST.in  README  buildbot_pkg.py  pyproject.toml  setup.cfg  setup.py  test_buildbot_pkg.py  vendor.sh
pkg/buildbot_pkg/: __init__.py
pkg/installation_tests/: .gitignore  README.rst  testall.sh
worker/: .mypy.ini  Dockerfile  Dockerfile.py3  MANIFEST.in  Makefile  README  UPGRADING  pyproject.toml  ruff.toml  setup.cfg  setup.py  tox.ini
worker/buildbot_worker/: __init__.py  base.py  bot.py  compat.py  exceptions.py  hangcheck.py  interfaces.py  invalid_utf8.bugfix  msgpack.py  null.py  pb.py  pbutil.py  runprocess.py  tunnel.py  util.py
worker/buildslave/: base.py  bot.py  runprocess.py
worker/buildworker/: base.py  bot.py  exceptions.py  interfaces.py  null.py  pb.py  runprocess.py
worker/contrib/: README.txt
worker/docker/: buildbot.tac
worker/docs/: buildbot-worker.1  buildworker.1
www/badges/: .gitignore  package.json  pyproject.toml  setup.py
www/base/: .babelrc  .gitignore  MANIFEST.in  frontend_proxy.js  index.html  karma.conf.js  package-lock.json  package.json  pyproject.toml  setup.py  startProxy.bat  vite.config.mts  vite.config.ts  vitest.setup.tsx  webpack.config.js
www/console_view/: MANIFEST.in  buildbot_console_view.py  eslint.config.js  karma.conf.js  package-lock.json  package.json  postcss.config.js  pyproject.toml  setup.py  vite.config.mts  vite.config.ts  webpack.config.js
www/grid_view/: MANIFEST.in  eslint.config.js  gulpfile.js  package-lock.json  package.json  prettier.config.js  pyproject.toml  setup.py  tsconfig.json  vite.config.mts  vite.config.ts  webpack.config.js
www/nestedexample/: README  package.json  pyproject.toml  setup.py
www/waterfall_view/: .babelrc  Gruntfile.coffee  buildbot_waterfall_view.py  package-lock.json  package.json  pyproject.toml  setup.py  vite.config.mts  vite.config.ts  webpack.config.js
www/wsgi_dashboards/: package-lock.json  package.json  pyproject.toml  setup.py  vite.config.mts  vite.config.ts  webpack.config.js
(+6817 files in other folders)
