[build-system]
requires = [
    "setuptools>=80",
    "setuptools-scm>=9",
]
build-backend = "setuptools.build_meta"

[project]
name = "buildbot"
requires-python = ">=3.9"
authors = [
    { name = "Brian Warner", email = "warner-buildbot@lothar.com" },
]
maintainers = [
    { name = "Dustin J. Mitchell", email = "dustin@v.igoro.us" },
]
description = "The Continuous Integration Framework"
readme = "README.rst"
license = {text = "GPL-2.0-or-later"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: No Input/Output (Daemon)",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Testing",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dynamic = [
    "version",
    "dependencies",
    "optional-dependencies",
    "scripts",
    "entry-points",
]

[project.urls]
Homepage = "http://buildbot.net/"

[tool.aliases]
test = "trial -m buildbot"

[tool.setuptools]
include-package-data = false

[tool.setuptools.package-data]
"buildbot.reporters.templates" = ["*.txt"]
"buildbot.db.migrations" = ["alembic.ini", "README"]
"buildbot.db.migrations.versions" = ["*.py"]
"buildbot.scripts" = ["sample.cfg", "buildbot_tac.tmpl"]
"buildbot.spec" = ["*.raml"]
"buildbot.spec.types" = ["*.raml"]
"buildbot.test.unit.test_templates_dir" = ["*.html"]
"buildbot.test.unit.test_templates_dir.plugin" = ["*.*"]
"buildbot.test.integration.pki" = ["*.*"]
"buildbot.test.integration.pki.ca" = ["*.*"]
