[aliases]
test = trial -m buildbot

[metadata]
name = buildbot
python_requires = >=3.9
author = Brian Warner
author_email = warner-buildbot@lothar.com
maintainer = Dustin J. Mitchell
maintainer_email = dustin@v.igoro.us
description = The Continuous Integration Framework
url = http://buildbot.net/
long_description = file: README.rst
license = GPL-2.0-or-later
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: No Input/Output (Daemon)
    Environment :: Web Environment
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    Topic :: Software Development :: Testing
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13

[options.package_data]
buildbot.reporters.templates = *.txt
buildbot.db.migrations =
    alembic.ini
    README
buildbot.db.migrations.versions = *.py
buildbot.scripts =
    sample.cfg
    buildbot_tac.tmpl
buildbot.spec = *.raml
buildbot.spec.types = *.raml
buildbot.test.unit.test_templates_dir = *.html
buildbot.test.unit.test_templates_dir.plugin = *.*
buildbot.test.integration.pki = *.*
buildbot.test.integration.pki.ca = *.*
