[build-system]
requires = [
    "setuptools>=80",
    "setuptools-scm>=9",
]
build-backend = "setuptools.build_meta"

[project]
name = "buildbot-pkg"
authors = [
    { name = "Pierre Tardy", email = "tardyp@gmail.com" },
]
description = "Buildbot packaging tools"
license = {text = "GPL-2.0-or-later"}
dependencies = [
    "setuptools >= 34.4.0",
]
dynamic = [
    "version",
]

[project.urls]
Homepage = "http://buildbot.net/"

[tool.setuptools]
# for some reason, with 'pyproject.toml' setuptools
# will include 'test_buildbot_pkg.py' in sdist,
# which wasn't with a similar 'setup.cfg'
py-modules = [
    "buildbot_pkg"
]
include-package-data = false

[tool.setuptools_scm]
root = ".."
local_scheme = "no-local-version"
