[metadata]
name = buildbot-pkg
author = Pierre Tardy
author_email = tardyp@gmail.com
description = Buildbot packaging tools
url = http://buildbot.net/
classifiers =
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
install_requires =
    setuptools >= 34.4.0

[options]
py_modules = buildbot_pkg
