[aliases]
test = trial -m buildbot_worker

[metadata]
name = buildbot-worker
author = Brian Warner
author_email = warner-buildbot@lothar.com
maintainer = Dustin J. Mitchell
maintainer_email = dustin@v.igoro.us
description = Buildbot Worker Daemon
url = http://buildbot.net/
long_description = See the 'buildbot' package for details
license = GPL-2.0-or-later
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: No Input/Output (Daemon)
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    Topic :: Software Development :: Testing
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
