[build-system]
requires = [
    "setuptools>=80",
    "setuptools-scm>=9",
]
build-backend = "setuptools.build_meta"

[project]
name = "buildbot-www"
authors = [
    { name = "Povilas Kanapickas", email = "povilas@radix.lt" },
]
description = "Buildbot UI"
license = {text = "GPL-2.0-or-later"}

dependencies = [
    "buildbot",
]
dynamic = [
    "version",
]

[project.entry-points."buildbot.www"]
base = "buildbot_www:ep"

[project.urls]
Homepage = "http://buildbot.net/"

[tool.setuptools]
include-package-data = false
packages = [
    "buildbot_www",
]

[tool.setuptools.package-data]
"buildbot_www" = [
    "static/*",
    "static/assets/*",
]

[tool.setuptools_scm]
root = "../.."
version_file = "buildbot_www/_version.py"
local_scheme = "no-local-version"
