[build-system]
requires = [
    "setuptools>=80",
    "setuptools-scm>=9",
]
build-backend = "setuptools.build_meta"

[project]
name = "buildbot-grid-view"
authors = [
    { name = "Robin Jarry", email = "robin.jarry@6wind.com" },
]
description = "Buildbot Grid View plugin"
license = {text = "GPL-2.0-or-later"}

dynamic = [
    "version",
]

[project.entry-points."buildbot.www"]
grid_view = "buildbot_grid_view:ep"

[project.urls]
Homepage = "http://buildbot.net/"

[tool.setuptools]
include-package-data = false
packages = [
    "buildbot_grid_view",
]

[tool.setuptools.package-data]
"buildbot_grid_view" = [
    "static/*",
    "static/assets/*",
]

[tool.setuptools_scm]
root = "../.."
version_file = "buildbot_grid_view/_version.py"
local_scheme = "no-local-version"
